# 20-december-hack

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
3d-virtual-tryon/: README.md  SETUP_GUIDE.md  TECHNICAL_DOCS.md  index.html  main.jsx  package.json  virtual-tryout.jsx
addons/: .env  appareldesk.py  catalog_ai_agent.py  catalog_scraper.py  po_inference_runner.py  send_email.py  test.py  visual_search_agent.py
addons/po_requisition/: .gitignore  README.md  __manifest__.py
addons/po_requisition/models/: requisition.py
addons/po_requisition/report/: __init__.py  requisition_report.py  requisition_report_templates.xml  requisition_reports.xml
addons/po_requisition/security/: ir.model.access.csv  security.xml
addons/po_requisition/views/: requisition_view.xml
backend/: .env.example  Dockerfile  README.md  admin_api.py  auth.py  db.py  main.py  models.py  orders.py  requirements.txt  reset_db.py  seed.py  stock_alerts.py  visual_search.py  websocket_manager.py
backend/assets/: .gitkeep
docs/: IDEA.md  new 2.txt  new1.txt
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: AdminDataContext.tsx  AuthContext.tsx  CartContext.tsx
frontend/src/data/: products.ts
frontend/src/lib/: adminApi.ts  api.ts
frontend/src/pages/: AdminLogin.tsx  Auth.tsx  Cart.tsx  Checkout.tsx  CustomerLogin.tsx  Dashboard.tsx  Index.tsx  (+8 more)
(+25 files in other folders)
