[project]
name = "odoo-finale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "passlib==1.7.4",
    "bcrypt==3.2.0",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    "click>=8.3.1",
]
